tests/baselines/reference/objectLiteralWithNumericPropertyName.errors.txt
tests/cases/compiler/objectLiteralWithNumericPropertyName.ts(4,5): error TS2322: Type '{ 0: 数字; }' is not assignable to type 'A'.
  Types of property '0' are incompatible.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/objectLiteralWithNumericPropertyName.ts (1 errors) ====
    interface A {
        0: string;
    }
    var x: A = {
        ~
!!! error TS2322: Type '{ 0: 数字; }' is not assignable to type 'A'.
!!! error TS2322:   Types of property '0' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
        0: 3
    };
    